--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "6.10.3"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
@@ -49,5 +52,14 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ap0404/VideoApp.git"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ]
 }
